tests/fixtures/LatestTests/VariableDeclarationTests/errors/int64_to_int32.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:int = 5l

